[feat/#120] 유저 테이블에 UserRole 추가